# rlstats

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  README.md  config.py  db.py  docker-compose.yml  frame_analysis.py  ingest.py  mise.toml  player_identity.py  process.py  pyproject.toml  pyrightconfig.json  replay_validator.py  rrrocket_schema.py  server.py
config/: settings.example.toml
migrations/: 001_schema.sql  002_view_mvp_win_rate.sql  003_view_mvp_in_losses.sql  004_view_win_loss_by_weekday.sql  005_add_constraints.sql  005_view_shooting_pct.sql  006_platform_identity.sql  006_view_player_stats.sql  007_possession.sql  007_view_win_loss_daily.sql  008_add_score.sql  008_demolitions.sql  009_3v3_views.sql  009_ball_thirds.sql  010_map_name.sql  010_match_events.sql  011_2v2_hoops_views.sql  011_boost_stats.sql  012_player_movement_stats.sql  012_view_avg_score.sql  013_add_forfeit.sql  013_player_pad_stats.sql  014_match_and_match_player_indexes.sql  014_view_score_differential.sql  015_demos_received.sql  015_view_streaks.sql  016_offensive_pairings.sql  016_sessions.sql  017_rename_ball_thirds_to_zones.sql  017_session_daily_view.sql  018_player_zone_seconds.sql  018_view_avg_goal_contribution.sql
scripts/: entrypoint.sh  ingest-loop.sh
sql/: match_detail.sql  match_results.sql  matches.sql  mvp.sql  player_stats.sql  player_time_series.sql  queries.sql
static/: app.js  index.html  match.html  match.js  player.html  player.js  style.css  upload.html  upload.js  utils.js
tests/: conftest.py  fixtures.py  test_config.py  (+9 more)
(+12 files in other folders)
