[project]
name = "rlstats"
version = "0.7.0"
description = "Personal project for tracking our RL teams' stats"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosql>=15.0",
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "orjson>=3.11.7",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.0.2",
]
