[project]
name = "rlstats"
version = "0.8.0"
description = "Personal project for tracking our RL teams' stats"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosql>=15.0",
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "orjson>=3.11.7",
    "python-multipart>=0.0.31",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.15",
    "pyright>=1.1",
    "pytest>=9.0.3",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_return_any = true
